src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use '@angular/material' as mat;
@use './styles/_variables.scss' as var;

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();

$kincaid-primary: mat.define-palette(var.$primary-palette);
$kincaid-accent: mat.define-palette(var.$secondary-palette);
$kincaid-warn: mat.define-palette(mat.$red-palette);

$kincaid-typography: mat.define-typography-config(
	$font-family: 'Roboto Mono',
);

$kincaid-light-theme: mat.define-light-theme(
	(
		color: (
			primary: $kincaid-primary,
			accent: $kincaid-accent,
			warn: $kincaid-warn,
		),
	)
);

$kincaid-dark-theme: mat.define-dark-theme(
	(
		color: (
			primary: $kincaid-primary,
			accent: $kincaid-accent,
			warn: $kincaid-warn,
		),
	)
);

@include mat.core($kincaid-typography);

.dark-mode {
	@include mat.all-component-themes($kincaid-dark-theme);
}

.light-mode {
	@include mat.all-component-colors($kincaid-light-theme);
}

html,
body {
	height: 100%;
}
body,
body [class^='mat-'],
body [class*=' mat-'] {
	margin: 0;
}

